# Joy-of-Perspective-NG

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
